kubernetes/apps/endurain/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: endurain
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
