kubernetes/apps/endurain/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: endurain
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
